--- a/index.html
+++ b/index.html
@@ -52,6 +52,95 @@
         padding: 0;
         margin: 0;
       }
+      #nav {
+        display: flex;
+        flex-direction: row-reverse;
+        margin: 12px;
+      }
+      .toggle-btn {
+        width: 71px;
+        height: 32px;
+        background-color: gray;
+        border-radius: 30px;
+        padding: 5px;
+        /* to make the animation smooth */
+        transition: all 300ms ease-in-out;
+      }
+
+      .toggle-btn.active {
+        background-color: #00acee;
+      }
+
+      .toggle-btn.active > .inner-circle {
+        margin-left: 37px;
+      }
+
+      .toggle-btn > .inner-circle {
+        width: 22px;
+        height: 22px;
+        background: #fff;
+        border-radius: 50%;
+        transition: all 300ms ease-in-out;
+      }
+      /* dark mode starts*/
+
+      body,
+      #wrapper,
+      #left,
+      #right {
+        background-color: #262833 !important;
+      }
+
+      #heading_dark {
+        color: #7e8ce0 !important;
+      }
+
+      input {
+        background-color: #262833 !important;
+      }
+
+      .btn-warning {
+        background-color: #9f54fb !important;
+        border-color: #9f54fb !important;
+      }
+
+      .btn-success {
+        background-color: #ff6238 !important;
+        border-color: #ff6238 !important;
+      }
+
+      #inputAmount,
+      #inputText {
+        color: white !important;
+      }
+
+      .dynamictable {
+        background-color: #4a4e64 !important;
+        color: #c0c0c0 !important;
+        border-radius: 7px !important;
+        box-shadow: 0 5px 25px rgba(0, 0, 0, 0.25) !important;
+      }
+
+      .table > tbody > tr > td,
+      .table > tbody > tr > th,
+      .table > tfoot > tr > td,
+      .table > tfoot > tr > th,
+      .table > thead > tr > td,
+      .table > thead > tr > th {
+        padding: 8px;
+        line-height: 1.42857143;
+        vertical-align: top;
+        border-top: 1px solid #1f2029;
+      }
+      #date > img {
+        opacity: 1 !important;
+      }
+
+      #inputAmount:focus,
+      #inputText:focus {
+        border-bottom: 2px solid #acef78 !important;
+      }
+      /* dark mode ends*/
 
       #inputAmount:focus,
       #inputText:focus {
@@ -106,10 +195,14 @@
 
       .totaldiv {
         min-width: 300px;
-        font-size: 22px;
+        font-size: 21px;
         font-family: sans-serif;
         text-align: center;
+        border-radius: 10px;
         opacity: 0.8;
+        color: #3c763d;
+        background-color: #dff0d8;
+        padding: 5px;
       }
 
       .dateparent {
@@ -160,14 +253,20 @@
 
         #date > img {
           object-fit: contain;
-          height: 30px;
+          height: 25px;
           margin-right: 7px;
           opacity: 0.4;
+          margin-top: -2px;
         }
 
         .mainimg {
           object-fit: contain;
           height: 277px;
+          margin-top: -21px;
+        }
+        #footer {
+          margin: 0 !important;
+          padding: 0 !important;
         }
 
         #left {
@@ -191,6 +290,9 @@
       @media only screen and (min-width: 1024px) {
         /* If the screen size is over 1024px wide. */
 
+        #nav {
+          margin-right: 141px;
+        }
         #inputAmount,
         #inputText {
           border: none;
@@ -235,7 +337,7 @@
         #left {
           display: flex;
           align-items: center;
-          height: 100vh;
+          height: 90vh;
           padding: 0 !important;
           margin: 0 !important;
         }
@@ -245,7 +347,7 @@
           flex-direction: column;
           align-items: center;
           justify-content: center;
-          height: 100vh;
+          height: 90vh;
           background-color: white;
           padding: 0 !important;
           margin: 0 !important;
@@ -263,6 +365,12 @@
   <body>
     <div class="container">
       <div id="wrapper" class="row">
+        <div id="nav">
+          <div class="toggle-btn" onclick="this.classList.toggle('active')">
+            <div class="inner-circle"></div>
+          </div>
+        </div>
+
         <div id="left" class="col-md-6 col-sm-12 col-xs-12">
           <img src="wallet.png" class="mainimg" />
         </div>
@@ -290,8 +398,7 @@
           </button>
           <p id="footer">
             Made with
-            <i class="fa fa-heart" style="color: red; opacity: 0.4"></i> by
-            Sahil
+            <i class="fa fa-heart" style="color: red"></i> by Sahil
           </p>
         </div>
       </div>
@@ -338,7 +445,7 @@
           console.log("im in else statement");
           //Displaying total
           if (isNaN(typednumber)) {
-            totalresultElement.innerHTML = `<div class=" totaldiv alert alert-success" role="alert">Please enter numerical value in amount</div>`;
+            totalresultElement.innerHTML = `<div class=" totaldiv " role="alert">Please enter numerical value</div>`;
           } else {
             let expenseObject = {};
             expenseObject.value = typednumber;
@@ -349,7 +456,7 @@
             total = total + convertedTypedNumber;
             console.log(total);
 
-            totalresultElement.innerHTML = `<div class=" totaldiv alert alert-success" role="alert">Total spendings is &#8377; ${total}</div>`;
+            totalresultElement.innerHTML = `<div class=" totaldiv " role="alert">Total spendings is &#8377; ${total}</div>`;
           }
 
           //Displaying items
