--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
     />
+
+    <link id="togglcssfile" rel="stylesheet" href="day.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=BioRhyme&display=swap"
       rel="stylesheet"
@@ -47,228 +49,37 @@
 
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <style>
-      body {
-        padding: 0;
-        margin: 0;
-      }
-
-      #inputAmount:focus,
-      #inputText:focus {
-        border-bottom: 2px solid#A0D7FF;
-      }
-
-      #inputText {
-        margin-top: 15px;
-      }
-
-      #btncounter {
-        min-width: 300px;
-        margin-top: 20px;
-        font-weight: 700;
-        font-family: sans-serif;
-        font-size: 16px;
-      }
-
-      #btncounter:focus,
-      #btncounter:active {
-        outline: none;
-        border: none;
-      }
-
-      #downloadbtn {
-        margin: 15px;
-        min-width: 300px;
-        font-size: 16px;
-        font-weight: 700;
-        font-family: sans-serif;
-        border: none;
-        outline: none;
-      }
-
-      #downloadbtn:active,
-      #downloadbtn:focus {
-        margin: 20px;
-        border: none;
-        outline: none;
-      }
-
-      .dynamictable {
-        padding: 10px;
-        margin: 10px;
-        width: 300px;
-        font-size: 16px;
-        font-family: sans-serif;
-        font-weight: 500;
-        text-align: center;
-        background-color: #e2e2e3;
-      }
-
-      .totaldiv {
-        min-width: 300px;
-        font-size: 22px;
-        font-family: sans-serif;
-        text-align: center;
-        opacity: 0.8;
-      }
-
-      .dateparent {
-        display: flex;
-      }
-
-      @media only screen and (min-width: 300px) and (max-width: 767px) {
-        /*If the screen size is atleast 300px wide, but no more than 767px */
-
-        .smallparent {
-          display: flex;
-        }
-
-        .smallpng {
-          object-fit: contain;
-          height: 50px;
-        }
-
-        #inputAmount,
-        #inputText {
-          border: none;
-          outline: none;
-          border-bottom: 2px solid silver;
-          width: 300px;
-          padding-left: 7px;
-          font-size: 18px;
-          font-family: Roboto;
-          color: #696969;
-          opacity: 0.5;
-        }
-
-        #heading {
-          font-size: 23px;
-          font-weight: bold;
-          color: #ffba66;
-          font-family: Roboto;
-          margin-top: 30px !important;
-          width: 321px;
-          text-align: center;
-        }
-
-        #date {
-          color: silver;
-          font-size: 25px;
-          font-weight: 700;
-          font-family: Roboto;
-        }
-
-        #date > img {
-          object-fit: contain;
-          height: 30px;
-          margin-right: 7px;
-          opacity: 0.4;
-        }
-
-        .mainimg {
-          object-fit: contain;
-          height: 277px;
-        }
-
-        #left {
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          padding: 0 !important;
-          margin-top: 30px !important;
-        }
-
-        #right {
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          justify-content: center;
-          padding: 0 !important;
-          background-color: white;
-        }
-      }
-
-      @media only screen and (min-width: 1024px) {
-        /* If the screen size is over 1024px wide. */
-
-        #inputAmount,
-        #inputText {
-          border: none;
-          outline: none;
-          border-bottom: 2px solid silver;
-          width: 300px;
-          padding-left: 7px;
-          font-size: 20px;
-          font-family: Roboto;
-          color: #696969;
-          opacity: 0.5;
-        }
-
-        #heading {
-          font-size: 35px;
-          font-weight: bold;
-          color: #ffba66;
-          font-family: Roboto;
-          width: 485px;
-          text-align: center;
-        }
-
-        #date {
-          color: silver;
-          font-size: 30px;
-          font-weight: 700;
-          font-family: Roboto;
-        }
-
-        #date > img {
-          object-fit: contain;
-          height: 32px;
-          margin-right: 7px;
-          opacity: 0.4;
-        }
-
-        .mainimg {
-          object-fit: contain;
-          height: 500px;
-        }
-
-        #left {
-          display: flex;
-          align-items: center;
-          height: 100vh;
-          padding: 0 !important;
-          margin: 0 !important;
-        }
-
-        #right {
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          justify-content: center;
-          height: 100vh;
-          background-color: white;
-          padding: 0 !important;
-          margin: 0 !important;
-        }
-      }
-
-      #footer {
-        font-size: 16px;
-        color: #c0c0c0;
-        font-family: sans-serif;
-      }
-    </style>
   </head>
-
+  <!-- onclick="this.classList.toggle('active')" -->
   <body>
     <div class="container">
       <div id="wrapper" class="row">
+        <div id="nav">
+          <div class="toggle-btn" onclick="togglecss()">
+            <div class="inner-circle"></div>
+          </div>
+        </div>
+
+        <script>
+          function togglecss() {
+            document.querySelector(".toggle-btn").classList.toggle("active");
+
+            var togglelement = document.querySelector("#togglcssfile");
+            if (togglelement.href.match("day.css")) {
+              togglelement.href = "night.css";
+              console.log("night");
+            } else {
+              togglelement.href = "day.css";
+              console.log("day");
+            }
+          }
+        </script>
+
         <div id="left" class="col-md-6 col-sm-12 col-xs-12">
           <img src="wallet.png" class="mainimg" />
         </div>
         <div id="right" class="col-md-6 col-sm-12 col-xs-12">
-          <p id="heading">< Personal Expense Tracker /></p>
-
+          <p class="heading">< Personal Expense Tracker /></p>
           <p id="date"></p>
           <p id="totalSpent"></p>
           <input
@@ -290,8 +101,7 @@
           </button>
           <p id="footer">
             Made with
-            <i class="fa fa-heart" style="color: red; opacity: 0.4"></i> by
-            Sahil
+            <i class="fa fa-heart" style="color: red"></i> by Sahil
           </p>
         </div>
       </div>
@@ -338,7 +148,7 @@
           console.log("im in else statement");
           //Displaying total
           if (isNaN(typednumber)) {
-            totalresultElement.innerHTML = `<div class=" totaldiv alert alert-success" role="alert">Please enter numerical value in amount</div>`;
+            totalresultElement.innerHTML = `<div class=" totaldiv " role="alert">Please enter numerical value</div>`;
           } else {
             let expenseObject = {};
             expenseObject.value = typednumber;
@@ -349,7 +159,7 @@
             total = total + convertedTypedNumber;
             console.log(total);
 
-            totalresultElement.innerHTML = `<div class=" totaldiv alert alert-success" role="alert">Total spendings is &#8377; ${total}</div>`;
+            totalresultElement.innerHTML = `<div class=" totaldiv " role="alert">Total spendings is &#8377; ${total}</div>`;
           }
 
           //Displaying items
