--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         #heading {
           font-size: 23px;
           font-weight: bold;
-          color: #ffba66;
+          color: #0275d8 ;
           font-family: Roboto;
           margin-top: 30px !important;
           width: 321px;
@@ -207,7 +207,7 @@
         #heading {
           font-size: 35px;
           font-weight: bold;
-          color: #ffba66;
+          color: #0275d8 ;
           font-family: Roboto;
           width: 485px;
           text-align: center;
@@ -282,7 +282,7 @@
             Add +
           </button>
           <div id="result"></div>
-          <button id="downloadbtn" type="button" class="btn btn-warning">
+          <button id="downloadbtn" type="button" class="btn btn-primary">
             Take Screenshot<i
               class="fa fa-bolt"
               style="margin-left: 10px; font-size: 16px"
